Bug 1701085 - Return the native menu's trigger node from nsXULPopupManager::GetLastTriggerNode while the native menu is open. r=tnikkel

Differential Revision: https://phabricator.services.mozilla.com/D110304